@@ -2438,12 +2438,8 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|watchedCollectionStates
-operator|.
-name|put
+name|updateWatchedCollection
 argument_list|(
-name|s
-argument_list|,
 name|live
 argument_list|)
 expr_stmt|;
@@ -2815,46 +2811,6 @@ name|clusterState
 operator|=
 name|clusterState
 expr_stmt|;
-block|}
-synchronized|synchronized
-init|(
-name|ZkStateReader
-operator|.
-name|this
-init|)
-block|{
-for|for
-control|(
-name|String
-name|watchedCollection
-range|:
-name|watchedCollections
-control|)
-block|{
-name|DocCollection
-name|live
-init|=
-name|getCollectionLive
-argument_list|(
-name|this
-argument_list|,
-name|watchedCollection
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|live
-operator|!=
-literal|null
-condition|)
-block|{
-name|updateWatchedCollection
-argument_list|(
-name|live
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 block|}
 block|}
 else|else
